[package]
name = "fourree"
version = "0.2.0"
authors = ["Tim Anderegg <timothy.anderegg@cfpb.gov>"]

[lib]
name = "fourree"
path = "src/lib.rs"

[[bin]]
name = "fourree"
path = "src/main.rs"

[[example]]
name = "generators"
path = "examples/generators/main.rs"

[[example]]
name = "generate_row"
path = "examples/generate_row/main.rs"

[[example]]
name = "json_schema"
path = "examples/json_schema/main.rs"

[dependencies]
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
log = "0.3"
getopts = "0.2"
time = "0.1"
pad = "0.1"
num = "0.2"
rusoto_core = "0.34.0"
rusoto_s3 = "0.34.0"
